[package]
name = "worklog"
version = "0.1.4-alpha"
authors = ["Eric Beanland <eric.beanland@gmail.com>"]
publish = false
build = "build.rs"

[dependencies]
clap = "~2.22.1"
chrono = { version = "^0.3.1", features = ["serde"] }
csv = { version = "1.0.0-beta.1", git = "https://github.com/BurntSushi/rust-csv.git", branch = "rewrite" }
serde = "~1.0.6"
serde_derive = "~1.0.6"

[build-dependencies]
peg = { version = "0.5" }
