[package]
name = "worklog"
version = "0.1.4-alpha"
authors = ["Eric Beanland <eric.beanland@gmail.com>"]
publish = false
build = "build.rs"

[dependencies]
clap = "~2.24.2"
chrono = { version = "^0.3.1", features = ["serde"] }
csv = "1.0.0-beta.3"
serde = "~1.0.8"
serde_derive = "~1.0.8"

[build-dependencies]
peg = { version = "~0.5.0" }
