[package]
name = "worklog"
version = "0.1.4-alpha"
authors = ["Eric Beanland <eric.beanland@gmail.com>"]
publish = false
build = "build.rs"

[dependencies]
clap = "~2.29.2"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.0.0-beta.5"
error-chain = "0.11.0"
serde = "~1.0.27"
serde_derive = "~1.0.27"

[build-dependencies]
peg = { version = "~0.5.0" }
